# 3drenderer-c

./: CMakeLists.txt  display.c  display.h  main.c  mesh.c  mesh.h  vector.c  vector.h
